#3222 - Fix activity header spacing issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -399,7 +399,7 @@
 	}
 
 	.bp-activity-head {
-		margin-right: 25px;
+		margin-right: 35px;
 	}
 
 	.bb-activity-more-options-wrap {
