--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2433,7 +2433,7 @@ input.search-query-input {
 }
 
 .activity-list .bp-activity-head {
-  margin-left: 25px;
+  margin-left: 35px;
 }
 
 .activity-list .bb-activity-more-options-wrap {
