--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -2433,7 +2433,7 @@ input.search-query-input {
 }
 
 .activity-list .bp-activity-head {
-  margin-right: 25px;
+  margin-right: 35px;
 }
 
 .activity-list .bb-activity-more-options-wrap {
